--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <title>UMBC IS Department</title>
     <link rel="stylesheet" href="home_styles.css">
     <title>UMBC IS Department</title>
+    <style>
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+
+      li {
+        float: left;
+      }
+
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      li a:hover {
+        background-color: #111;
+      }
+    </style>
     
     
   </head>
