--- a/index.html
+++ b/index.html
@@ -6,39 +6,14 @@
     <title>UMBC IS Department</title>
     <link rel="stylesheet" href="home_styles.css">
     <title>UMBC IS Department</title>
-    <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #333;
-      }
-
-      li {
-        float: left;
-      }
-
-      li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-      li a:hover {
-        background-color: #111;
-      }
-    </style>
-    
     
   </head>
   <body>
 
     <ul>
       <li><a class="active" href="https://umbc.edu/"><img src="logo.png" alt="UMBC logo" width = "100" height = "125"/></a></li>
-      <li><a href="contact_us.html">Contact</a></li>
+      <li><a href="#news">News</a></li>
+      <li><a href="contact_us.html">Contact Us</a></li>
       <li><a href="#about">About Us</a></li>
     </ul>
 
