--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   </head>
   <body>
 
+    <a href= "https://umbc.edu/"><img src="logo.png" alt="UMBC logo" width = "100" height = "125"/></a>
+
     <ul>
-      <li><a class="active" href="https://umbc.edu/"><img src="logo.png" alt="UMBC logo" width = "100" height = "125"/></a></li>
+      <li><a class="active" href="#home">Home</a></li>
       <li><a href="#news">News</a></li>
-      <li><a href="contact_us.html">Contact Us</a></li>
-      <li><a href="#about">About Us</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About</a></li>
     </ul>
 
     
