--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
 
+    <a href= "https://umbc.edu/"><img src="logo.png" alt="UMBC logo" width = "100" height = "125"/></a>
 
     <ul>
       <li><a class="active" href="#home">Home</a></li>
