--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <ul>
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="contact_us.html">Contact Us</a></li>
+      <li><a href="undergrad_program.html">Undergraduate Programs</a></li>
       <li><a href="about_us.html">About Us</a></li>
     </ul>
 
