--- a/about_us.html
+++ b/about_us.html
@@ -1,1 +1,46 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html">
+    <title>About Us</title>
 
+    <style>
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+  
+      li {
+        float: left;
+      }
+  
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+  
+      li a:hover {
+        background-color: #111;
+      }
+    </style>
+
+  </head>
+  <body>
+    <a href= "https://umbc.edu/"><img src="logo.png" alt="UMBC logo" width = "100" height = "125"/></a>
+
+    <ul>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="contact_us.html">Contact Us</a></li>
+      <li><a href="undergrad_program.html">Undergraduate Programs</a></li>
+      <li><a href="about_us.html">About Us</a></li>
+    </ul>
+
+  </body>
+</html>
