--- a/undergrad_program.html
+++ b/undergrad_program.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html">
-    <title>Contact Us</title>
+    <title>Undergraduate Programs</title>
 
     
 
