--- a/undergrad_program.html
+++ b/undergrad_program.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html">
+    <link rel="stylesheet" href="undergrad_styles.css">
     <title>Undergraduate Programs</title>
 
     
