--- a/contact_us.html
+++ b/contact_us.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html">
+    <link rel="stylesheet" href="contact_styles.css">
     <title>Contact Us</title>
 
     
