--- a/about_us.html
+++ b/about_us.html
@@ -42,5 +42,9 @@ li a:hover {
       <li><a href="about_us.html">About Us</a></li>
     </ul>
 
+    <h1>UMBC Department of Information Systems</h1>
+
+    <p>The Department of Information Systems is a part of the College of Engineering and Information Technology.</p>
+
   </body>
 </html>
