--- a/contact_us.html
+++ b/contact_us.html
@@ -19,5 +19,21 @@
       <li><a href="about_us.html">About Us</a></li>
     </ul>
 
+    <h1>Contact Us</h1>
+
+    <h2><b>Phone Number</b></h2>
+    <p>410-455-3206</p>
+
+    <h2><b>Email</b></h2>
+    <a href="mailto:informationsystems.edu">
+      ::before
+      "informationsystems.edu"
+      ::after
+    </a>
+
+    <h2><b>Location</b></h2>
+    <p>Information Technology and Engineering Building</p>
+    <p>Suite 404</p>
+
   </body>
 </html>
