--- a/contact_us.html
+++ b/contact_us.html
@@ -25,11 +25,7 @@
     <p>410-455-3206</p>
 
     <h2><b>Email</b></h2>
-    <a href="mailto:informationsystems.edu">
-      ::before
-      "informationsystems.edu"
-      ::after
-    </a>
+    <a href="mailto:informationsystems.edu"> informationsystems.edu </a>
 
     <h2><b>Location</b></h2>
     <p>Information Technology and Engineering Building</p>
