--- a/contact_us.html
+++ b/contact_us.html
@@ -21,14 +21,17 @@
 
     <h1>Contact Us</h1>
 
-    <h2><b>Phone Number</b></h2>
-    <p>410-455-3206</p>
+    <p><b>Phone Number</b>
+      410-455-3206
+    </p>
 
-    <h2><b>Email</b></h2>
-    <a href="mailto:informationsystems.edu"> informationsystems.edu </a>
+    <p><b>Email</b> 
+      <a href="mailto:informationsystems.edu"> informationsystems.edu </a>
+    </p>
 
-    <h2><b>Location</b></h2>
-    <p>Information Technology and Engineering Building</p>
+    <p><b>Location</b>
+      Information Technology and Engineering Building
+    </p>
     <p>Suite 404</p>
 
   </body>
