--- a/contact_us.html
+++ b/contact_us.html
@@ -22,7 +22,7 @@
     <h1>Contact Us</h1>
 
     <p><b>Phone Number</b>
-      410-455-3206
+      <a href="tel:(410) 455-3206"> 410-455-3206 </a>
     </p>
 
     <p><b>Email</b> 
