--- a/about_us.html
+++ b/about_us.html
@@ -42,8 +42,10 @@ li a:hover {
       <li><a href="about_us.html">About Us</a></li>
     </ul>
 
+    <a target="_blank" href="https://coeit.umbc.edu/"><h2>College of Engineering and Information Technology</h2></a>
     <h1>Department of Information Systems</h1>
 
+    <h3>About Us</h3>
     <p>The Department of Information Systems is a part of the College of Engineering and Information Technology (COEIT). This department focuses on developing students to be able to enter the workforce. Students will learn a variety of skills including technical, interpersonal, written, verbal, and critical thinking. There are many different majors such as B.A. in business technology administration, B.S. in information systems, B.S./M.S., M.S. in information systems (also online), M.S. in human-centered computing, Ph.D. in information systems, and Ph.D. in human-centered computing.</p>
 
   </body>
