--- a/about_us.html
+++ b/about_us.html
@@ -37,6 +37,14 @@ li a:hover {
  h2 {
    color: #da2128;
  }
+      
+ h1 {
+   color: #fdb515;
+ }
+      
+ h3 {
+   font-size: 35px;
+ }
 </style>
 
   </head>
