--- a/contact_us.html
+++ b/contact_us.html
@@ -19,6 +19,9 @@
       <li><a href="about_us.html">About Us</a></li>
     </ul>
 
+    <a target="_blank" href="https://coeit.umbc.edu/"><h2>College of Engineering and Information Technology</h2></a>
+    <h1>Department of Information Systems</h1>
+
     <h1>Contact Us</h1>
 
     <p><b>Phone Number</b>
