--- a/contact_us.html
+++ b/contact_us.html
@@ -24,15 +24,15 @@
 
     <h1>Contact Us</h1>
 
-    <p><b>Phone Number</b>
+    <p>Phone Number
       <a href="tel:(410) 455-3206"> 410-455-3206 </a>
     </p>
 
-    <p><b>Email</b> 
+    <p>Email 
       <a href="mailto:informationsystems.edu"> informationsystems.edu </a>
     </p>
 
-    <p><b>Location</b>
+    <p>Location
       Information Technology and Engineering Building
     </p>
     <p>Suite 404</p>
