--- a/contact_us.html
+++ b/contact_us.html
@@ -24,21 +24,22 @@
 
     <h3>Contact Us</h3>
 
-    <p>Phone Number
+    <p><b>Phone Number</b>
       <br />
       <a href="tel:(410) 455-3206"> 410-455-3206 </a>
     </p>
 
-    <p>Email 
+    <p><b>Email</b>
       <br />
       <a href="mailto:informationsystems.edu"> informationsystems.edu </a>
     </p>
 
-    <p>Location
+    <p><b>Location</b>
       <br />
       Information Technology and Engineering Building
+      <br />
+      Suite 404
     </p>
-    <p>Suite 404</p>
 
   </body>
 </html>
