--- a/undergrad_program.html
+++ b/undergrad_program.html
@@ -19,5 +19,8 @@
       <li><a href="about_us.html">About Us</a></li>
     </ul>
 
+    <a target="_blank" href="https://coeit.umbc.edu/"><h2>College of Engineering and Information Technology</h2></a>
+    <h1>Department of Information Systems</h1>
+
   </body>
 </html>
