--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
     <a target="_blank" href="https://coeit.umbc.edu/"><h2>College of Engineering and Information Technology</h2></a>
     <h1>Department of Information Systems</h1>
 
-      
+    
+
+    <footer>
+      <p>
+        University of Maryland, Baltimore County
+        1000 Hilltop Circle, Baltimore, MD 21250
+        <a href="https://umbc.edu/about/visit/directions/">Directions</a>
+      </p>
+    </footer>
 
   </body>
 
