--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <br />
         1000 Hilltop Circle, Baltimore, MD 21250
         <br />
-        <a href="https://umbc.edu/about/visit/directions/">Directions</a>
+        <a target="_blank" href="https://umbc.edu/about/visit/directions/">Directions</a>
       </p>
     </footer>
 
