--- a/about_us.html
+++ b/about_us.html
@@ -45,6 +45,13 @@ li a:hover {
  h3 {
    font-size: 20px;
  }
+
+ footer {
+    text-align: center;
+    padding: 3px;
+    background-color: #333;
+    color: white;
+  }
 </style>
 
   </head>
