--- a/undergrad_program.html
+++ b/undergrad_program.html
@@ -22,5 +22,18 @@
     <a target="_blank" href="https://coeit.umbc.edu/"><h2>College of Engineering and Information Technology</h2></a>
     <h1>Department of Information Systems</h1>
 
+    <h3>Undergraduate Programs</h3>
+
+
+    <footer>
+      <p>
+        University of Maryland, Baltimore County
+        <br />
+        1000 Hilltop Circle, Baltimore, MD 21250
+        <br />
+        <a target="_blank" href="https://umbc.edu/about/visit/directions/">Directions</a>
+      </p>
+    </footer>
+
   </body>
 </html>
