--- a/contact_us.html
+++ b/contact_us.html
@@ -41,5 +41,15 @@
       Suite 404
     </p>
 
+    <footer>
+      <p>
+        University of Maryland, Baltimore County
+        <br />
+        1000 Hilltop Circle, Baltimore, MD 21250
+        <br />
+        <a target="_blank" href="https://umbc.edu/about/visit/directions/">Directions</a>
+      </p>
+    </footer>
+
   </body>
 </html>
