--- a/about_us.html
+++ b/about_us.html
@@ -71,5 +71,15 @@ li a:hover {
     <h3>About Us</h3>
     <p>The Department of Information Systems is a part of the College of Engineering and Information Technology (COEIT). This department focuses on developing students to be able to enter the workforce. Students will learn a variety of skills including technical, interpersonal, written, verbal, and critical thinking. There are many different majors such as B.A. in business technology administration, B.S. in information systems, B.S./M.S., M.S. in information systems (also online), M.S. in human-centered computing, Ph.D. in information systems, and Ph.D. in human-centered computing.</p>
 
+    <footer>
+      <p>
+        University of Maryland, Baltimore County
+        <br />
+        1000 Hilltop Circle, Baltimore, MD 21250
+        <br />
+        <a target="_blank" href="https://umbc.edu/about/visit/directions/">Directions</a>
+      </p>
+    </footer>
+
   </body>
 </html>
