--- a/about_us.html
+++ b/about_us.html
@@ -52,6 +52,11 @@ li a:hover {
     background-color: #333;
     color: white;
   }
+
+  p {
+    text-align: left;
+  }
+      
 </style>
 
   </head>
