--- a/about_us.html
+++ b/about_us.html
@@ -53,7 +53,7 @@ li a:hover {
     color: white;
   }
 
-  p {
+  h4 {
     text-align: left;
   }
       
@@ -74,7 +74,7 @@ li a:hover {
     <h1>Department of Information Systems</h1>
 
     <h3>About Us</h3>
-    <p>The Department of Information Systems is a part of the College of Engineering and Information Technology (COEIT). This department focuses on developing students to be able to enter the workforce. Students will learn a variety of skills including technical, interpersonal, written, verbal, and critical thinking. There are many different majors such as B.A. in business technology administration, B.S. in information systems, B.S./M.S., M.S. in information systems (also online), M.S. in human-centered computing, Ph.D. in information systems, and Ph.D. in human-centered computing.</p>
+    <h4>The Department of Information Systems is a part of the College of Engineering and Information Technology (COEIT). This department focuses on developing students to be able to enter the workforce. Students will learn a variety of skills including technical, interpersonal, written, verbal, and critical thinking. There are many different majors such as B.A. in business technology administration, B.S. in information systems, B.S./M.S., M.S. in information systems (also online), M.S. in human-centered computing, Ph.D. in information systems, and Ph.D. in human-centered computing.</h4>
 
     <footer>
       <p>
