--- a/about_us.html
+++ b/about_us.html
@@ -49,12 +49,12 @@ li a:hover {
  footer {
     text-align: center;
     padding: 3px;
-    background-color: #333;
+    background-color: #D3D3D3;
     color: white;
   }
 
-  h4 {
-    text-align: left;
+  p {
+    text-align: center;
   }
       
 </style>
@@ -74,7 +74,7 @@ li a:hover {
     <h1>Department of Information Systems</h1>
 
     <h3>About Us</h3>
-    <h4>The Department of Information Systems is a part of the College of Engineering and Information Technology (COEIT). This department focuses on developing students to be able to enter the workforce. Students will learn a variety of skills including technical, interpersonal, written, verbal, and critical thinking. There are many different majors such as B.A. in business technology administration, B.S. in information systems, B.S./M.S., M.S. in information systems (also online), M.S. in human-centered computing, Ph.D. in information systems, and Ph.D. in human-centered computing.</h4>
+    <p>The Department of Information Systems is a part of the College of Engineering and Information Technology (COEIT). This department focuses on developing students to be able to enter the workforce. Students will learn a variety of skills including technical, interpersonal, written, verbal, and critical thinking. There are many different majors such as B.A. in business technology administration, B.S. in information systems, B.S./M.S., M.S. in information systems (also online), M.S. in human-centered computing, Ph.D. in information systems, and Ph.D. in human-centered computing.</p>
 
     <footer>
       <p>
