--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
     <a target="_blank" href="https://coeit.umbc.edu/"><h2>College of Engineering and Information Technology</h2></a>
     <h1>Department of Information Systems</h1>
 
+    <h3>Upcoming Events</h3>
+    <p>
+      <ul>
+        <li>Super Smash Bros Pizza Party</li>
+        <li>Networking Event with Recruiters</li>
+        <li>Lecture with Dr. Chen</li>
+      </ul>
+    </p>
+
+    <a href="https://informationsystems.umbc.edu/home/faculty-and-staff/student-spotlights/"><h3>Student Spotlights</h3></a>
+    
     
 
     <footer>
