--- a/undergrad_program.html
+++ b/undergrad_program.html
@@ -24,6 +24,22 @@
 
     <h3>Undergraduate Programs</h3>
 
+    <p>
+      Bachelor of Arts in Business Technology Administration: The BA program is designed for students who want a basic education in the use of IT for various business purposes. The BA degree is less technical in nature than the BS program and the focus of the courses is on using IT of different types to solve problems that arise in a business setting.
+      <br />
+      Bachelor of Science in Information System: The BS program prepares students for all potential career positions in the IS field. These include: Systems Analysis and Design, Computer Networking and Health Care Informatics.
+      <br />
+      Combined Bachelor of Arts in Business Technology Administration/Human-Centered Computing Master of Science: The BTA BA/HCC MS degree program allows the student to complete both degrees with usually one more year of study than is typically required for the BTA BA degree alone, since three of the courses in the Master’s core are taken while completing the undergraduate degree but are applied to both degrees.
+      <br />
+      Combined Bachelor of Science/Master of Science: The combined program is available for undergraduate students whose academic performance shows readiness and motivation for graduate study.
+      <br />
+      Combined Bachelor of Science/Human Centered Computing Master of Science: The IS BS/HCC MS degree program allows the student to complete both degrees with usually one more year of study than is typically required for the IS BS degree alone, since three of the courses in the Master’s core are taken while completing the undergraduate degree but are applied to both degrees.
+      <br />
+      Minor in Information Systems: The IS minor provides UMBC students pursuing non-IS majors with a sequence of courses relevant to IT issues that they may encounter later in any field. The IS minor also give students some skills for addressing those issues in different organizational environments.
+      <br />
+      Minor in Management: The Minor in Management trains students in the skillsets and knowledge needed to manage people, projects, and organizations. It includes relevant topics that are in high demand in the industry.
+    </p>
+
 
     <footer>
       <p>
