--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a target="_blank" href="https://coeit.umbc.edu/"><h2>College of Engineering and Information Technology</h2></a>
     <h1>Department of Information Systems</h1>
 
-    <a href="https://informationsystems.umbc.edu/home/calendar/events/>"<h3>Upcoming Events</h3></a>
+    <a href="https://informationsystems.umbc.edu/home/calendar/events/"><h3>Upcoming Events</h3></a>
     
 
     <a href="https://informationsystems.umbc.edu/home/faculty-and-staff/student-spotlights/"><h3>Student Spotlights</h3></a>
